syntax = "proto3";

package chat;

option go_package = "/proto";

// 채팅 서비스 정의
service ChatService {
  // 메시지 전송
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
  
  // 메시지 스트림 구독 (실시간 메시지 수신)
  rpc SubscribeToMessages(SubscribeRequest) returns (stream ChatMessage);
  
  // 사용자 등록
  rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse);
  
  // 사용자 목록 조회
  rpc GetUsers(GetUsersRequest) returns (GetUsersResponse);
  
  // 채팅방 생성
  rpc CreateRoom(CreateRoomRequest) returns (CreateRoomResponse);
  
  // 채팅방 참여
  rpc JoinRoom(JoinRoomRequest) returns (JoinRoomResponse);
  
  // 채팅방 나가기
  rpc LeaveRoom(LeaveRoomRequest) returns (LeaveRoomResponse);
  
  // 채팅방 목록 조회
  rpc GetRooms(GetRoomsRequest) returns (GetRoomsResponse);
  
  // 사용자 온라인 상태 변경
  rpc UpdateUserStatus(UpdateUserStatusRequest) returns (UpdateUserStatusResponse);
}

// 메시지 전송 요청
message SendMessageRequest {
  string user_id = 1;    // 사용자 ID
  string message = 2;    // 메시지 내용
  string room_id = 3;    // 채팅방 ID
}

// 메시지 전송 응답
message SendMessageResponse {
  bool success = 1;      // 성공 여부
  string message_id = 2; // 생성된 메시지 ID
  string error = 3;      // 에러 메시지 (실패시)
}

// 메시지 구독 요청
message SubscribeRequest {
  string user_id = 1;    // 사용자 ID
  string room_id = 2;    // 채팅방 ID
}

// 채팅 메시지
message ChatMessage {
  string message_id = 1; // 메시지 ID
  string user_id = 2;    // 발신자 ID
  string username = 3;   // 발신자 이름
  string message = 4;    // 메시지 내용
  string room_id = 5;    // 채팅방 ID
  int64 timestamp = 6;   // 전송 시간 (Unix timestamp)
}

// 사용자 등록 요청
message RegisterUserRequest {
  string username = 1;   // 사용자 이름
}

// 사용자 등록 응답
message RegisterUserResponse {
  bool success = 1;      // 성공 여부
  string user_id = 2;    // 생성된 사용자 ID
  string error = 3;      // 에러 메시지 (실패시)
}

// 사용자 목록 조회 요청
message GetUsersRequest {
  string room_id = 1;    // 채팅방 ID
}

// 사용자 목록 조회 응답
message GetUsersResponse {
  repeated User users = 1; // 사용자 목록
}

// 사용자 정보
message User {
  string user_id = 1;    // 사용자 ID
  string username = 2;   // 사용자 이름
  bool online = 3;       // 온라인 상태
}

// 채팅방 생성 요청
message CreateRoomRequest {
  string name = 1;       // 채팅방 이름
  string creator_id = 2; // 생성자 ID
}

// 채팅방 생성 응답
message CreateRoomResponse {
  bool success = 1;      // 성공 여부
  string room_id = 2;    // 생성된 채팅방 ID
  string error = 3;      // 에러 메시지 (실패시)
}

// 채팅방 참여 요청
message JoinRoomRequest {
  string user_id = 1;    // 사용자 ID
  string room_id = 2;    // 채팅방 ID
}

// 채팅방 참여 응답
message JoinRoomResponse {
  bool success = 1;      // 성공 여부
  string error = 2;      // 에러 메시지 (실패시)
}

// 채팅방 나가기 요청
message LeaveRoomRequest {
  string user_id = 1;    // 사용자 ID
  string room_id = 2;    // 채팅방 ID
}

// 채팅방 나가기 응답
message LeaveRoomResponse {
  bool success = 1;      // 성공 여부
  string error = 2;      // 에러 메시지 (실패시)
}

// 채팅방 목록 조회 요청
message GetRoomsRequest {
  // 빈 메시지 (모든 방 조회)
}

// 채팅방 목록 조회 응답
message GetRoomsResponse {
  repeated Room rooms = 1; // 채팅방 목록
}

// 채팅방 정보
message Room {
  string room_id = 1;    // 채팅방 ID
  string name = 2;       // 채팅방 이름
  string creator_id = 3; // 생성자 ID
  int32 user_count = 4;  // 참여자 수
  int64 created_at = 5;  // 생성 시간 (Unix timestamp)
}

// 사용자 상태 변경 요청
message UpdateUserStatusRequest {
  string user_id = 1;    // 사용자 ID
  bool online = 2;       // 온라인 상태
}

// 사용자 상태 변경 응답
message UpdateUserStatusResponse {
  bool success = 1;      // 성공 여부
  string error = 2;      // 에러 메시지 (실패시)
} 
